...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="middleMiddle"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="bottomLeft"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="bottomRight"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="rightTop"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="middleTop"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="leftTop"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="middleLeft"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="middleRight"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="-"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="bottomMiddle"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
